5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1785_3124.log
== TEST (2019-05-30 10:32:34) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
r=i+1

while(i<size(v)):
	m=(v[i]*v[r])**1/i
print(round(m,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:00) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
r=i+1

while(i<size(v)):
	m=(v[i]*v[r])**1/i
i=i+1
print(round(m,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:29) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
r=i+1

while(i<size(v)):
	m=(v[i]*v[r])**1/r
i=i+1
print(round(m,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:57) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
r=i+1

while(i<size(v)):
	m=(v[i]*v[r])**1/r
i=i+1

print(round(m,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:47:31) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0


while(i<size(v)):
	

while(i<size(v)):
	m=m+v[i]
	i=i+1

print(round(m**1/i,2))

	
-- ERROR:
File "XXXX", line 10
    while(i<size(v)):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:47:49) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
	

while(i<size(v)):
	m=m+v[i]
	i=i+1

print(round(m**1/i,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:49:13) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
	

while(i<size(v)):
	m=m+v[i]
	i=i+1
x=m**1/i
print(round(x,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:49:48) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
	

while(i<size(v)):
	m=m+v[i-1]
	i=i+1
x=m**1/i
print(round(x,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:50:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
	

while(i<size(v)):
	m=m+v[i]
	i=i+1
x=m**1/i
print(round(x,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:52:31) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
	

while(i<size(v)):
	m=m+v[i]
	i=i+1
x=m**(1/size(v))
print(round(x,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:54:49) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
	

while(i<size(v)):
	m=m+v[i]
	i=i+1
x=m**(1/size(v))
print(round(x,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:55:03) 
-- CODE:
from numpy import*
v=array(eval(input("digite um vetor: ")))
i=0
m=0
	

while(i<size(v)):
	m=m+v[i]
	i=i+1
x=m**(1/size(v))
print(round(x,2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
